<resources>
    <string name="app_name">GPSA</string>
    <string name="alarm_off">TURN ON</string>
    <string name="alarm_on">TURN OFF</string>
    <string name="decrease">DECREASE</string>
    <string name="increase">INCREASE</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="alarmText">You have arrived at your location!</string>
    <string name="banner_ad_unit_id">ca-app-pub-2493554175078356/1112151026</string>
    <string name="mapApiKey">AIzaSyB83nFQGVLDf0SyNyo8A3KwGu9zRG_5RiY</string>
    <string name="back">Go back</string>
    <string name="favorite_list_dialog_title">Select favorite location</string>
    <string name="favorite_list_dialog_positive">Choose</string>
    <string name="favorite_list_dialog_negative">Cancel</string>
    <string name="add_favorite_dialog_title">Add favorite location</string>
    <string name="add_favorite_dialog_positive">Save</string>
    <string name="add_favorite_dialog_negative">Cancel</string>
    <string name="map_your_destination">Mark as favorite</string>
    <string name="location_permission_dialog_title">Permission required</string>
    <string name="location_permission_dialog_message">This application needs to access your location in order to work. Give this application permission to use location in your phones settings. REMEMBER to restart the app after you have given it permission to use the phones location.</string>
    <string name="location_persmission_dialog_positive">Open settings</string>
    <string name="location_permission_dialog_negative">Close</string>
    <string name="notification_title">Alarm is on</string>
    <string name="snackbar_id_1">Maximum range set to </string>
    <string name="snackbar_id_2">Can\'t be lower then </string>
    <string name="snackbar_id_3">Please choose a place for your alarm</string>
    <string name="snackbar_id_4">Location added to your favorites</string>
    <string name="snackbar_id_5">No location selected</string>
    <string name="snackbar_id_6">Only 5 favorites allowed</string>
    <string name="snackbar_id_7">Make the name of your favorite is unique</string>
    <string name="snackbar_id_8">Favorite location must have a name</string>
    <string name="snackbar_id_9">Alarm is on</string>
    <string name="snackbar_id_10">Alarm is off</string>
    <string name="alarm_button_text">STOP ALARM</string>
    <string name="application_desc">Location based alarm application</string>
    <string name="favorite_naming_hint">Name your location...</string>
    <string name="guide_step_1">1. Select your destination by clicking on the map.</string>
    <string name="guide_step_2">2. Select how far from your destination you want to be alerted by using the slider and selecting your distance (in meters).</string>
    <string name="guide_step_3">3. When you are happy with your alarm, turn it on by pressing the on button.</string>
    <string name="guide_step_4">4. You can use your phone for other stuff when the alarm is active. Killing the application will also kill and remove the alarm.</string>
    <string name="guide_note">NOTE: The alarm is only active for at max 24 hours, then it kills itself!</string>
    <string name="slider_Desc">Distance from destination</string>
    <string name="guide_favorites">FAVORITES: When you have a destination and a distance selected, you can add a location to your favorites by clicking on the marker. By then long pressing the on button, you can select one of your favorite location and start it quickly by selecting it in the list!</string>
    <string name="snackbar_id_11">Favorite removed</string>
    <string name="fav_clear_button">Erase all favorites</string>
    <string name="no_favorite_status">No favorites</string>
    <string name="fav_remove_favorite" >Remove</string>
    <string name="remove_favorite_dialog_negative">No</string>
    <string name="remove_favorite_dialog_title">Remove favorite?</string>
    <string name="remove_favorite_dialog_positive">Yes</string>
    <string name="remove_favorites_dialog_title">Remove all favorites?</string>
    <string name="snackbar_id_12">No existing favorites</string>
    <string name="snackbar_id_13">All favorites removed</string>
</resources>
