<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/guide_step_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:layout_margin="10dp"/>
            <TextView
                android:text="@string/guide_step_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_margin="10dp"/>
            <TextView
                android:text="@string/guide_step_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_margin="10dp"/>
            <TextView
                android:text="@string/guide_step_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_margin="10dp"/>
            <TextView
                android:text="@string/guide_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_margin="10dp"/>
            <TextView
                android:text="@string/guide_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
</LinearLayout>